# src/swagger.json
@@ -786,6 +786,19 @@
           }
         }
       }
+    },
+
+    "/api/config/stripe-key": {
+      "get": {
+        "tags": ["Config"],
+        "summary": "Get Stripe published key",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "publishable Key"
+          }
+        }
+      }
     }
   },
   "definitions": {
